--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Node modules (frontend + backend)
+node_modules/
+client/node_modules/
+server/node_modules/
+
+# Environment files (frontend + backend)
+.env
+client/.env
+server/.env
